--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^6.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
